2006-08-27  root  <root@gills2.dancysoft.com>
1.1.64
        * config.cl:  New option: *pid-file*, defaults to /var/run/maild.pid.

	* smtp-server.cl: If *pid-file* is true, record the process at the
	specified location at SMTP server startup.  Use an unwind-protect
	to clean it up during shutdown.

2006-08-26  root  <root@gills.dancysoft.com>
1.1.63

	* aliases.cl: Don't log "Reparsing aliases" if aliases hadn't been
	parsed at all yet (such as when starting maild from the command
	line).  Rearranged some code and structures to make the system
	more robust in case of alias parsing errors.  Fixed bug where 'eq'
	was being used to compare file-write-dates.  file-write-dates tend
	to be bignums so will 'eq' will return nil for two bignums that
	look the same.  Changed to 'eql' (not using = because 'nil' may be
	returned for non-existent files).

2006-08-25  Ahmon Dancy  <dancy@dancy>
1.1.62
	
	* Removed pam.cl since it's in Allegro CL now.

2006-08-23  Ahmon Dancy  <dancy@dancy>

	* load.cl: Added :regexp2 to the module list for building.

2006-08-21  Ahmon Dancy  <dancy@dancy>
1.1.61
	
	* Use different pam files for modern redhat/fedora and redhat 7.3.

2006-08-17  Ahmon Dancy  <dancy@dancy>
1.1.60
	
	* aliases.cl: BUGFIX: If parsing of system aliases file was
	aborted due to incorrect owner/permissions, it would never be
	reparsed again.  Fixed.

2006-08-11  root  <root@gills.dancysoft.com>
1.1.59

	* greylist.cl: Additional "don't greylist authenticate clients"
	fix.

1.1.58
	
	* config.cl: Comment updates for some checkers.

	* greylist.cl: Don't greylist authenticated clients (fix).

	* smtp-server-checkers.cl: Call smtp-data-checkers with 'sess' as first arg.

2006-08-08  root  <root@gills.dancysoft.com>
1.1.57
	
	* Makefile:  Pass -W arg to lisp when building.

	* smtp-server.cl: In places where checkers are called, if one of
	them returns :sufficient, then skip the remaining checkers in the
	list.

	Call data-pre-checkers with 'sess' as first argument.
	